--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,23 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>MUSEUM</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body class="wrapper">
-    <header class="header">
+    <header
+      class="header"
+      id="header"
+    >
       <div class="container">
         <div class="header__top">
-          <button
+          <a
             class="header__burder"
-            type="button"
-          ></button>
+            href="#menu"
+          ></a>
           <a
             href="#"
             class="header__logo logo"
@@ -65,7 +68,10 @@
       <div class="container">
         <div class="menu__wrapper">
           <div class="menu__main">
-            <button class="menu__close">
+            <a
+              class="menu__close"
+              href="#"
+            >
               <svg
                 width="14"
                 height="14"
@@ -78,7 +84,7 @@
                   fill="white"
                 />
               </svg>
-            </button>
+            </a>
             <ul class="menu__list">
               <li class="menu__item">
                 <a
@@ -90,7 +96,7 @@
               </li>
               <li class="menu__item">
                 <a
-                  href=""
+                  href="#subscribe"
                   class="menu__link"
                 >
                   Про Нас
@@ -98,7 +104,7 @@
               </li>
               <li class="menu__item">
                 <a
-                  href=""
+                  href="#events"
                   class="menu__link"
                 >
                   Виставки та події
@@ -106,7 +112,7 @@
               </li>
               <li class="menu__item">
                 <a
-                  href=""
+                  href="#footer"
                   class="menu__link"
                 >
                   Контакти
@@ -140,7 +146,10 @@
       class="main"
       id="main"
     >
-      <section class="events">
+      <section
+        class="events"
+        id="events"
+      >
         <div class="container">
           <h2 class="events__title title">Актуальні події</h2>
           <article class="events__item event">
@@ -219,7 +228,10 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section
+        class="gallery"
+        id="gallery"
+      >
         <div class="container">
           <h2 class="gallery__title title">Галерея</h2>
           <div class="gallery__inner">
@@ -268,7 +280,10 @@
         </div>
       </section>
 
-      <section class="subscribe">
+      <section
+        class="subscribe"
+        id="subscribe"
+      >
         <div class="container">
           <div class="subscribe__inner">
             <div class="subscribe__info">
@@ -293,7 +308,10 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer
+      class="footer"
+      id="footer"
+    >
       <div class="container">
         <div class="footer__inner">
           <div class="footer__top">
@@ -435,7 +453,7 @@
             <ul class="menu__list">
               <li class="menu__item">
                 <a
-                  href="#"
+                  href="#gallery"
                   class="menu__link"
                 >
                   Галерея
@@ -443,7 +461,7 @@
               </li>
               <li class="menu__item">
                 <a
-                  href="#"
+                  href="#footer"
                   class="menu__link"
                 >
                   Про Нас
@@ -451,7 +469,7 @@
               </li>
               <li class="menu__item">
                 <a
-                  href="#"
+                  href="#events"
                   class="menu__link"
                 >
                   Виставки та події
@@ -459,7 +477,7 @@
               </li>
               <li class="menu__item">
                 <a
-                  href="#"
+                  href="#subscribe"
                   class="menu__link"
                 >
                   Контакти
