--- a/src/index.html
+++ b/src/index.html
@@ -65,77 +65,79 @@
       class="header__menu menu"
       id="menu"
     >
-      <div class="container">
-        <div class="menu__wrapper">
-          <div class="menu__main">
-            <a
-              class="menu__close"
-              href="#"
-            >
-              <svg
-                width="14"
-                height="14"
-                viewBox="0 0 14 14"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
+      <div class="menu__bg">
+        <div class="container">
+          <div class="menu__wrapper">
+            <div class="menu__main">
+              <a
+                class="menu__close"
+                href="#"
               >
-                <path
-                  d="M6.99999 5.58599L11.95 0.635986L13.364 2.04999L8.41399 6.99999L13.364 11.95L11.95 13.364L6.99999 8.41399L2.04999 13.364L0.635986 11.95L5.58599 6.99999L0.635986 2.04999L2.04999 0.635986L6.99999 5.58599Z"
-                  fill="white"
-                />
-              </svg>
-            </a>
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a
-                  href=""
-                  class="menu__link"
+                <svg
+                  width="14"
+                  height="14"
+                  viewBox="0 0 14 14"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
                 >
-                  Галерея
-                </a>
-              </li>
-              <li class="menu__item">
-                <a
-                  href="#subscribe"
-                  class="menu__link"
-                >
-                  Про Нас
-                </a>
-              </li>
-              <li class="menu__item">
-                <a
-                  href="#events"
-                  class="menu__link"
-                >
-                  Виставки та події
-                </a>
-              </li>
-              <li class="menu__item">
-                <a
-                  href="#footer"
-                  class="menu__link"
-                >
-                  Контакти
-                </a>
-              </li>
-            </ul>
-          </div>
+                  <path
+                    d="M6.99999 5.58599L11.95 0.635986L13.364 2.04999L8.41399 6.99999L13.364 11.95L11.95 13.364L6.99999 8.41399L2.04999 13.364L0.635986 11.95L5.58599 6.99999L0.635986 2.04999L2.04999 0.635986L6.99999 5.58599Z"
+                    fill="white"
+                  />
+                </svg>
+              </a>
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a
+                    href="#gallery"
+                    class="menu__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    href="#subscribe"
+                    class="menu__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    href="#events"
+                    class="menu__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    href="#footer"
+                    class="menu__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
 
-          <div class="menu__schedule schedule">
-            <h4 class="schedule__name menu__schedule-name">Графік роботи</h4>
-            <ul class="schedule__list menu__schedule-list">
-              <li class="schedule__item">12:00 — 20:00 середа</li>
-              <li class="schedule__item">12:00 — 20:00 четвер</li>
-              <li class="schedule__item">12:00 — 20:00 п’ятниця</li>
-              <li class="schedule__item">11:00 — 19:00 субота</li>
-              <li class="schedule__item">11:00 — 19:00 неділя</li>
-            </ul>
-            <div class="schedule__info menu__schedule-info">
-              <p>
-                <span class="schedule__highliter">Вихідні</span>
-                : понеділок, вівторок
-              </p>
-              <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+            <div class="menu__schedule schedule">
+              <h4 class="schedule__name menu__schedule-name">Графік роботи</h4>
+              <ul class="schedule__list menu__schedule-list">
+                <li class="schedule__item">12:00 — 20:00 середа</li>
+                <li class="schedule__item">12:00 — 20:00 четвер</li>
+                <li class="schedule__item">12:00 — 20:00 п’ятниця</li>
+                <li class="schedule__item">11:00 — 19:00 субота</li>
+                <li class="schedule__item">11:00 — 19:00 неділя</li>
+              </ul>
+              <div class="schedule__info menu__schedule-info">
+                <p>
+                  <span class="schedule__highliter">Вихідні</span>
+                  : понеділок, вівторок
+                </p>
+                <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+              </div>
             </div>
           </div>
         </div>
