--- a/src/index.html
+++ b/src/index.html
@@ -299,6 +299,7 @@
                 type="email"
                 class="subscribe__input"
                 placeholder="E-mail"
+                title="Введіть свій Email"
               />
               <button
                 class="subscribe__button button button--color-orange"
@@ -494,7 +495,7 @@
             <div class="footer__designer-name">Designed by Zhyriada Marina</div>
           </div>
           <a
-            href="#main"
+            href="#header"
             class="footer__arrow-up button button--arrow-up"
           ></a>
         </div>
