--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,7 @@
       href="./images/favicon-32x32.png"
     />
     <title>MUSEUM</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
+
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -59,8 +56,7 @@
               >
                 <div class="header__ticket-name">КВИТКИ</div>
                 <button
-                  class="header__button button button--color-green"
-                ></button>
+                  class="header__button button button--color-green"></button>
               </a>
             </div>
           </div>
@@ -155,7 +151,7 @@
       class="main"
       id="main"
     >
-      <section
+      <!-- <section
         class="events"
         id="events"
       >
@@ -235,7 +231,7 @@
             </div>
           </article>
         </div>
-      </section>
+      </section> -->
 
       <section
         class="gallery"
@@ -289,44 +285,39 @@
 
           <!-- Slider main container -->
 
-          <div class="swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img
-                  src="./images/gallery/1.jpg"
-                  alt="photo"
-                  loading="lazy"
-                />
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="./images/gallery/5.jpg"
-                  alt="photo"
-                  loading="lazy"
-                />
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="./images/gallery/1.jpg"
-                  alt="photo"
-                  loading="lazy"
-                />
-              </div>
-              <div class="swiper-slide">
-                <img
-                  src="./images/gallery/5.jpg"
-                  alt="photo"
-                  loading="lazy"
-                />
-              </div>
+          <div class="gallery__slider slider">
+            <div class="slider__item">
+              <img
+                src="./images/gallery/1.jpg"
+                alt=""
+              >
+            </div>
+            <div class="slider__item">
+              <img
+                src="./images/gallery/2.jpg"
+                alt=""
+              >
+            </div>
+            <div class="slider__item">
+              <img
+                src="./images/gallery/3.jpg"
+                alt=""
+              >
+            </div>
+            <div class="slider__item">
+              <img
+                src="./images/gallery/4.jpg"
+                alt=""
+              >
             </div>
 
-            <div class="swiper-pagination"></div>
           </div>
+
+
         </div>
       </section>
 
-      <section
+      <!-- <section
         class="subscribe"
         id="subscribe"
       >
@@ -356,9 +347,9 @@
             </form>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
-
+    <!--
     <footer
       class="footer"
       id="footer"
@@ -557,9 +548,10 @@
           ></a>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
