--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
       type="image/x-icon"
       href="./images/favicon-32x32.png"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+
     <title>MUSEUM</title>
 
     <link
@@ -56,7 +62,8 @@
               >
                 <div class="header__ticket-name">КВИТКИ</div>
                 <button
-                  class="header__button button button--color-green"></button>
+                  class="header__button button button--color-green"
+                ></button>
               </a>
             </div>
           </div>
@@ -285,39 +292,36 @@
 
           <!-- Slider main container -->
 
-          <div class="gallery__slider slider">
+          <div class="gallery__slider slider ">
             <div class="slider__item">
               <img
                 src="./images/gallery/1.jpg"
                 alt=""
-              >
+              />
             </div>
             <div class="slider__item">
               <img
                 src="./images/gallery/2.jpg"
                 alt=""
-              >
+              />
             </div>
             <div class="slider__item">
               <img
                 src="./images/gallery/3.jpg"
                 alt=""
-              >
+              />
             </div>
             <div class="slider__item">
               <img
                 src="./images/gallery/4.jpg"
                 alt=""
-              >
+              />
             </div>
-
           </div>
-
-
         </div>
       </section>
 
-      <!-- <section
+       <section
         class="subscribe"
         id="subscribe"
       >
@@ -347,9 +351,9 @@
             </form>
           </div>
         </div>
-      </section> -->
+      </section>
     </main>
-    <!--
+
     <footer
       class="footer"
       id="footer"
@@ -548,9 +552,14 @@
           ></a>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
 
     <script src="scripts/main.js"></script>
   </body>
