--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
       class="main"
       id="main"
     >
-      <!-- <section
+      <section
         class="events"
         id="events"
       >
@@ -238,7 +238,7 @@
             </div>
           </article>
         </div>
-      </section> -->
+      </section>
 
       <section
         class="gallery"
@@ -292,28 +292,28 @@
 
           <!-- Slider main container -->
 
-          <div class="gallery__slider slider ">
+          <div class="gallery__slider slider">
             <div class="slider__item">
               <img
-                src="./images/gallery/1.jpg"
+                src="./images/gallery/7.jpg"
                 alt=""
               />
             </div>
             <div class="slider__item">
               <img
-                src="./images/gallery/2.jpg"
+                src="./images/gallery/6.jpg"
                 alt=""
               />
             </div>
             <div class="slider__item">
               <img
-                src="./images/gallery/3.jpg"
+                src="./images/gallery/7.jpg"
                 alt=""
               />
             </div>
             <div class="slider__item">
               <img
-                src="./images/gallery/4.jpg"
+                src="./images/gallery/6.jpg"
                 alt=""
               />
             </div>
@@ -321,7 +321,7 @@
         </div>
       </section>
 
-       <section
+      <section
         class="subscribe"
         id="subscribe"
       >
