--- a/src/index.html
+++ b/src/index.html
@@ -296,25 +296,25 @@
             <div class="slider__item">
               <img
                 src="./images/gallery/7.jpg"
-                alt=""
+                alt="image"
               />
             </div>
             <div class="slider__item">
               <img
                 src="./images/gallery/6.jpg"
-                alt=""
+                alt="image"
               />
             </div>
             <div class="slider__item">
               <img
                 src="./images/gallery/7.jpg"
-                alt=""
+                alt="image"
               />
             </div>
             <div class="slider__item">
               <img
                 src="./images/gallery/6.jpg"
-                alt=""
+                alt="image"
               />
             </div>
           </div>
@@ -410,15 +410,6 @@
                       fill="black"
                     />
                   </g>
-                  <defs>
-                    <clipPath id="clip0_12716_52">
-                      <rect
-                        width="24"
-                        height="24"
-                        fill="white"
-                      />
-                    </clipPath>
-                  </defs>
                 </svg>
               </a>
             </div>
