--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,518 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NaMu</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/images/logo/logo.svg"
+    />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/index.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body
+    class="page"
+    id="top"
+  >
+    <!-- <h1>Hello Mate Academy</h1> -->
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <a
+            href="#menu"
+            class="header__icon-menu icon icon--menu"
+          ></a>
+          <div class="header__top">
+            <a
+              href="#"
+              class="header__logo logo"
+            >
+              Na
+              <br />
+              Mu
+            </a>
+            <img
+              class="header__img"
+              src="./images/header/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+              alt="#"
+            />
+          </div>
+          <div class="header__bottom">
+            <h1 class="header__title">
+              Художній
+              <br />
+              музей
+            </h1>
+            <button
+              href="#current-events"
+              class="header__button"
+            >
+              Квитки
+            </button>
+            <a
+              href="#current-events"
+              class="header__bottom--events"
+            >
+              Події
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a
+              href="#"
+              class="menu__icon icon icon--close"
+            ></a>
+            <ul class="menu__list">
+              <li>
+                <a
+                  href="#gallery"
+                  class="menu__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#subscription"
+                  class="menu__link"
+                >
+                  Про нас
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#current-events"
+                  class="menu__link"
+                >
+                  Виставки та
+                  <br />
+                  події
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#contacts"
+                  class="menu__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="menu__line"></div>
+          <div class="menu__bottom">
+            <div class="menu__schedule">
+              <p class="menu__text">Графік роботи</p>
+              <ul class="menu__schedule-list">
+                <li>
+                  <p class="menu__text">
+                    <span>12:00 — 20:00</span>
+                    середа
+                  </p>
+                </li>
+                <li>
+                  <p class="menu__text">
+                    <span>12:00 — 20:00</span>
+                    четвер
+                  </p>
+                </li>
+                <li>
+                  <p class="menu__text">
+                    <span>12:00 — 20:00</span>
+                    п’ятниця
+                  </p>
+                </li>
+                <li>
+                  <p class="menu__text">
+                    <span>11:00 — 19:00</span>
+                    субота
+                  </p>
+                </li>
+                <li>
+                  <p class="menu__text">
+                    <span>11:00 — 19:00</span>
+                    неділя
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <p class="menu__text menu__bottom-text">
+              <span>Вихідні:</span>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <!-- #region current-events -->
+      <section
+        class="current-events"
+        id="current-events"
+      >
+        <div class="container">
+          <div class="current-events__content">
+            <h1 class="current-events__title title">Актуальні події</h1>
+            <div class="current-events__events">
+              <div class="event">
+                <img
+                  class="event__img"
+                  src="./images/events/event-1.png"
+                  alt="event-1"
+                />
+                <div class="event__info">
+                  <div class="event__date">
+                    <p class="event__date--name">ВИСТАВКА</p>
+                    <p class="event__date--time">26.08-29.11.2019</p>
+                  </div>
+                  <h2 class="event__title">Йду і повертаюсь</h2>
+                  <p class="event__description">
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку - українське мистецтво другої
+                    половини 1980-1995 років.
+                  </p>
+                </div>
+              </div>
+              <div class="event">
+                <img
+                  class="event__img"
+                  src="./images/events/event-2.png"
+                  alt="event-2"
+                />
+                <div class="event__info">
+                  <div class="event__date">
+                    <p class="event__date--name">ВИСТАВКА</p>
+                    <p class="event__date--time">26.08-29.11.2019</p>
+                  </div>
+                  <h2 class="event__title">І спогади і мрії</h2>
+                  <p class="event__description">
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+      <!-- #region lecture -->
+      <section class="lecture">
+        <img
+          class="lecture__img"
+          src="./images/lecture/lecture__background.png"
+          alt="lecture"
+        />
+        <div class="container">
+          <div class="lecture__text">
+            <div class="lecture__date">
+              <p class="lecture__date--name">ЛЕКЦІЯ</p>
+              <p class="lecture__date--time">26/08/2019 - 11:00</p>
+            </div>
+            <h2 class="lecture__title">Від класицизму до романтизму</h2>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+      <!-- #region gallery -->
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <div class="container">
+          <div class="gallery__content">
+            <h2 class="gallery__title title">Галерея</h2>
+            <div class="gallery__images">
+              <img
+                class="gallery__img gallery__img--1"
+                src="./images/gallery/photo_1.png"
+                alt="gallery photo"
+              />
+              <img
+                class="gallery__img gallery__img--2"
+                src="./images/gallery/photo_2.png"
+                alt="gallery photo"
+              />
+              <img
+                class="gallery__img gallery__img--3"
+                src="./images/gallery/photo_3.png"
+                alt="gallery photo"
+              />
+              <img
+                class="gallery__img gallery__img--4"
+                src="./images/gallery/photo_4.png"
+                alt="gallery photo"
+              />
+            </div>
+            <div class="gallery__dotts">
+              <div class="gallery__dot gallery__dot--active"></div>
+              <div class="gallery__dot"></div>
+              <div class="gallery__dot"></div>
+              <div class="gallery__dot"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+      <!-- #region subscription -->
+      <section
+        class="subscription"
+        id="subscription"
+      >
+        <div class="container">
+          <div class="subscription__content">
+            <h2 class="subscription__title title">Підписка</h2>
+            <p class="subscription__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              class="subscription__form"
+              onsubmit="this.reset(); return false;"
+            >
+              <label class="subscription__input-wrapper">
+                <input
+                  class="subscription__input"
+                  type="email"
+                  placeholder="E-mail"
+                  required
+                />
+              </label>
+              <button
+                class="subscription__button"
+                type="submit"
+              ></button>
+            </form>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <a
+              href="#"
+              class="footer__logo logo"
+            >
+              Na
+              <br />
+              Mu
+            </a>
+            <div class="footer__icons">
+              <a
+                class="icon icon--facebook"
+                href="https://www.facebook.com/story.php/?story_fbid=308695422143695&id=100090097197632"
+                target="_blank"
+              >
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_320_149)">
+                    <path
+                      d="M8.82075 4.64899C8.82075 5.2538 8.82075 7.9533 8.82075 7.9533H6.3999V11.9938H8.82075V24.0009H13.7937V11.9942H17.1308C17.1308 11.9942 17.4433 10.0568 17.5948 7.93841C17.1604 7.93841 13.8125 7.93841 13.8125 7.93841C13.8125 7.93841 13.8125 5.58776 13.8125 5.17573C13.8125 4.76282 14.3547 4.2074 14.8906 4.2074C15.4255 4.2074 16.5544 4.2074 17.6 4.2074C17.6 3.65727 17.6 1.75647 17.6 0.000976577C16.2042 0.000976577 14.6161 0.000976577 13.9161 0.000976577C8.69782 0.000697581 8.82075 4.04524 8.82075 4.64899Z"
+                    />
+                  </g>
+                  <defs>
+                    <clippath id="clip0_320_149">
+                      <rect
+                        width="24"
+                        height="24"
+                        fill="white"
+                      />
+                    </clippath>
+                  </defs>
+                </svg>
+              </a>
+              <a
+                class="icon"
+                href="https://www.instagram.com"
+                target="_blank"
+              >
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_320_152)">
+                    <path
+                      d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z"
+                    />
+                    <path
+                      d="M12.0001 6.84473C9.15753 6.84473 6.84473 9.15734 6.84473 12.0001C6.84473 14.8426 9.15753 17.1554 12.0001 17.1554C14.8428 17.1554 17.1554 14.8426 17.1554 12.0001C17.1554 9.15734 14.8428 6.84473 12.0001 6.84473Z"
+                    />
+                    <path
+                      d="M18.7191 4.51416C18.4258 4.51416 18.187 4.75293 18.187 5.04626C18.187 5.3396 18.4258 5.57837 18.7191 5.57837C19.0126 5.57837 19.2514 5.33978 19.2514 5.04626C19.2514 4.75275 19.0126 4.51416 18.7191 4.51416Z"
+                    />
+                  </g>
+                  <defs>
+                    <clippath id="clip0_320_152">
+                      <rect
+                        width="24"
+                        height="24"
+                        fill="white"
+                      />
+                    </clippath>
+                  </defs>
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__middle">
+            <div class="footer__schedule">
+              <p class="footer__text footer__text--title">Графік роботи</p>
+              <ul class="footer__schedule-list">
+                <li>
+                  <p class="footer__text">
+                    <span>12:00 — 20:00</span>
+                    середа
+                  </p>
+                </li>
+                <li>
+                  <p class="footer__text">
+                    <span>12:00 — 20:00</span>
+                    четвер
+                  </p>
+                </li>
+                <li>
+                  <p class="footer__text">
+                    <span>12:00 — 20:00</span>
+                    п’ятниця
+                  </p>
+                </li>
+                <li>
+                  <p class="footer__text">
+                    <span>11:00 — 19:00</span>
+                    субота
+                  </p>
+                </li>
+                <li>
+                  <p class="footer__text">
+                    <span>11:00 — 19:00</span>
+                    неділя
+                  </p>
+                </li>
+              </ul>
+              <p class="footer__text">
+                <span>Вихідні:</span>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+
+            <div
+              class="footer__contacts"
+              id="contacts"
+            >
+              <p class="footer__text footer__text--title">Контакти:</p>
+              <a
+                class="footer__text footer__contacts--link"
+                target="_blank"
+                href="https://www.google.com.ua/maps/place/вулиця+Михайла+Грушевського,+6,+Київ,+02000/@50.449395,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?hl=uk&entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoJLDEwMjExMjMzSAFQAw%3D%3D"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a
+                class="footer__text footer__contacts--link"
+                target="_blank"
+                href="tel:+380442781357"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <a
+                class="footer__text footer__contacts--link"
+                target="_blank"
+                href="tel:+380442787454"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+              <a
+                class="footer__text footer__contacts--link"
+                target="_blank"
+                href="mailto: info@namu.kiev.ua"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+            <a
+              class="footer__button"
+              href="#top"
+            ></a>
+            <div class="footer__line"></div>
+
+            <div class="footer__menu">
+              <ul class="footer__menu-list">
+                <li>
+                  <a
+                    href="#gallery"
+                    class="footer__menu--link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="#subscription"
+                    class="footer__menu--link"
+                  >
+                    Про нас
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="#current-events"
+                    class="footer__menu--link"
+                  >
+                    Виставки та
+                    <br />
+                    події
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="#contacts"
+                    class="footer__menu--link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer__bottom">
+            <p class="footer__bottom-text">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+            <p class="footer__bottom-text">Designed by Zhyriada Marina</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
