--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,528 @@
 <!doctype html>
-<html lang="en">
+<html
+  class="page"
+  lang="en"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      href="images/NAMU-logo.svg"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <div class="page__darken"></div>
+
+    <header
+      class="header"
+      id="header"
+    >
+      <div class="header__image-wrapp">
+        <img
+          class="header__image"
+          src="images/header/header-bg.png"
+          alt="NAMU bilding"
+        />
+
+        <h1 class="logo logo--header">
+          NA
+          <br />
+          MU
+        </h1>
+      </div>
+
+      <a
+        class="icon icon--header"
+        type="buttom"
+        href="#menu"
+      >
+        <div class="icon icon--burger-menu"></div>
+      </a>
+
+      <div class="header__content">
+        <h1 class="header__content-text">
+          ХУДОЖНІЙ
+          <br />
+          МУЗЕЙ
+        </h1>
+
+        <button
+          class="tickets tickets--content"
+          onclick="location.href='#signing';"
+          type="button"
+        >
+          <h3 class="tickets__label">КВИТКИ</h3>
+          <div class="tickets__btn-wrapp">
+            <div class="tickets__btn--red">
+              <img
+                src="./icons/icon-tickets-arrow.svg"
+                alt="tickets button"
+                class="tickets__btn-image"
+              />
+            </div>
+            <div class="tickets__btn--green">
+              <img
+                src="./icons/icon-tickets-arrow.svg"
+                alt="tickets button"
+                class="tickets__btn-image"
+              />
+            </div>
+          </div>
+        </button>
+
+        <div class="header__bottom">
+          <div class="header__bottom-line"></div>
+          <p class="header__bottom-text">ПОДІЇ</p>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="menu__top">
+        <a
+          class="icon icon--menu"
+          type="buttom"
+          href="#"
+        >
+          <div class="icon icon--close"></div>
+        </a>
+
+        <nav class="nav nav--menu">
+          <ul class="nav__list nav__list--menu">
+            <li class="nav__item nav__item--menu">
+              <a
+                href="#gallery"
+                class="nav__link nav__link--menu"
+              >
+                Галерея
+              </a>
+            </li>
+            <li class="nav__item nav__item--menu">
+              <a
+                href="#events"
+                class="nav__link nav__link--menu"
+              >
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav__item nav__item--menu">
+              <a
+                href="#"
+                class="nav__link nav__link--menu"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li class="nav__item nav__item--menu">
+              <a
+                href="#signing"
+                class="nav__link nav__link--menu"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="line line--menu"></div>
+
+      <div class="info info--menu info--timetable info--timetable-menu">
+        <h4 class="info info--text-title info--text-title-menu">
+          Графік роботи
+        </h4>
+        <h4 class="info info--text-description info--text-description-menu">
+          <strong>12:00 — 20:00</strong>
+          середа
+          <br />
+          <strong>12:00 — 20:00</strong>
+          четвер
+          <br />
+          <strong>12:00 — 20:00</strong>
+          п’ятниця
+          <br />
+          <strong>11:00 — 19:00</strong>
+          субота
+          <br />
+          <strong>11:00 — 19:00</strong>
+          неділя
+          <br />
+        </h4>
+        <h4 class="info info--text-notice info--text-notice-menu">
+          <strong>Вихідні:</strong>
+          понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+        </h4>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <div class="container">
+          <h2 class="section-title">Актуальні події</h2>
+
+          <section class="main__news">
+            <article class="events">
+              <img
+                src="images/main/events-image1.png"
+                alt="picture from exhibition"
+                class="events__pic events__pic--move"
+              />
+              <div class="events__content">
+                <div class="events__date">
+                  <div class="events__date-text">ВИСТАВКА</div>
+                  <div class="events__date-time">26.08-29.11.2019</div>
+                </div>
+                <h3 class="events__title">Йду і повертаюсь</h3>
+                <p class="events__descriptions">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+            <article class="events">
+              <img
+                src="images/main/events-image2.png"
+                alt="picture from exhibition"
+                class="events__pic events__pic--move"
+              />
+              <div class="events__content">
+                <div class="events__date">
+                  <div class="events__date-text">ВИСТАВКА</div>
+                  <div class="events__date-time">26.08-29.11.2019</div>
+                </div>
+                <h3 class="events__title">І спогади і мрії</h3>
+                <p class="events__descriptions">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </section>
+        </div>
+
+        <article
+          class="events events--lecture"
+          id="events"
+        >
+          <picture class="events__pic-wrapper">
+            <source
+              media="(min-width: 1280px)"
+              srcset="images/main/lecture-bg-desktop.png"
+              class="events__pic__image events__pic--lecture"
+            />
+
+            <img
+              src="images/main/lecture-bg-mobile.png"
+              alt="picture from exhibition"
+              class="events__pic__image events__pic--lecture"
+            />
+          </picture>
+
+          <div class="events__content events__content--lecture">
+            <div class="events__date events__date--lecture">
+              <div class="events__date-text">ЛЕКЦІЯ</div>
+              <div class="events__date-time">26/08/2019 - 11:00</div>
+            </div>
+            <h3 class="events__title events__title--lecture">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </article>
+
+        <section
+          class="gallery"
+          id="gallery"
+        >
+          <h2 class="section-title section-title--gallery">Галерея</h2>
+          <article class="slider">
+            <div class="slider__pics">
+              <div class="slider__item">
+                <img
+                  src="images/main/gallery-ukranian-girl.png"
+                  alt="ukranian girl"
+                  class="slider__image"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="images/main/gallery-village.png"
+                  alt="ukranian girl"
+                  class="slider__image"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="images/main/gallery-snow.png"
+                  alt="ukranian girl"
+                  class="slider__image"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="images/main/gallery-girl-in-garden.png"
+                  alt="ukranian girl"
+                  class="slider__image"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="images/main/gallery-sea.png"
+                  alt="ukranian girl"
+                  class="slider__image"
+                />
+              </div>
+            </div>
+
+            <div class="slider__arrows">
+              <button class="slider__arrow-link slider__arrow-link--back">
+                <img
+                  src="icons/arrow-back.svg"
+                  alt="arrow slider back"
+                  class="slider__arrow"
+                />
+              </button>
+              <button class="slider__arrow-link slider__arrow-link--forward">
+                <img
+                  src="icons/arrow-forward.svg"
+                  alt="arrow slider forward"
+                  class="slider__arrow"
+                />
+              </button>
+            </div>
+
+            <div class="slider__dots">
+              <div class="slider__dots-dot slider__dots-dot--active"></div>
+              <div class="slider__dots-dot"></div>
+              <div class="slider__dots-dot"></div>
+              <div class="slider__dots-dot"></div>
+              <div class="slider__dots-dot"></div>
+            </div>
+          </article>
+        </section>
+
+        <section
+          class="signing"
+          id="signing"
+        >
+          <article class="signing__container">
+            <div class="signing__text">
+              <h2 class="signing__text-title">Підписка</h2>
+              <p class="signing__text-description">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+            </div>
+
+            <form
+              class="signing__input"
+              action="http://localhost:8080/api"
+              method="post"
+              onsubmit="this.reset(); return false;"
+            >
+              <input
+                class="signing__input-email"
+                type="email"
+                placeholder="E-mail"
+              />
+              <button class="signing__btn">
+                <img
+                  src="./icons/icon-arrow-black.svg"
+                  alt="tickets button"
+                  class="signing__btn-image"
+                />
+              </button>
+            </form>
+          </article>
+        </section>
+      </div>
+    </main>
+
+    <footer
+      class="footer"
+      id="footer"
+    >
+      <div class="footer__top">
+        <h1 class="logo logo--footer">
+          NA
+          <br />
+          MU
+        </h1>
+
+        <div class="footer__socials">
+          <a
+            class="footer__socials-link"
+            href="https://www.facebook.com/namu.museum/?locale=ru_RU"
+            tabindex="1"
+            target="_blank"
+          >
+            <img
+              src="icons/icon-facebook.svg"
+              alt="facebook icon"
+              class="footer__socials-icon footer__socials-icon--fb"
+            />
+          </a>
+          <a
+            class="footer__socials-link"
+            href="https://www.instagram.com/namu.museum/"
+            tabindex="2"
+            target="_blank"
+          >
+            <img
+              src="icons/icon-inst.svg"
+              alt="instagram icon"
+              class="footer__socials-icon footer__socials-icon--inst"
+            />
+          </a>
+        </div>
+      </div>
+
+      <div class="info info--footer info--timetable info--timetable-footer">
+        <h4 class="info info--text-title info--text-title-footer">
+          Графік роботи
+        </h4>
+        <h4 class="info info--text-description info--text-description-footer">
+          <strong>12:00 — 20:00</strong>
+          середа
+          <br />
+          <strong>12:00 — 20:00</strong>
+          четвер
+          <br />
+          <strong>12:00 — 20:00</strong>
+          п’ятниця
+          <br />
+          <strong>11:00 — 19:00</strong>
+          субота
+          <br />
+          <strong>11:00 — 19:00</strong>
+          неділя
+          <br />
+        </h4>
+        <h4 class="info info--text-notice info--text-notice-footer">
+          <strong>Вихідні:</strong>
+          понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+        </h4>
+      </div>
+
+      <div class="info info--footer info--contacts">
+        <h4 class="info info--text-title">Контакти:</h4>
+        <h4 class="info info--text-description">
+          вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс +38
+          (044) 278-74-54 e-mail: info@namu.kiev.ua
+        </h4>
+      </div>
+
+      <div class="arrow">
+        <button
+          class="arrow__btn arrow__btn--back"
+          onclick="location.href='#header';"
+        >
+          <img
+            src="icons/arrow-page-header.png"
+            alt="navigation arrow"
+            class="arrow__image"
+          />
+        </button>
+        <button
+          class="arrow__btn arrow__btn--forward"
+          onclick="location.href='#footer';"
+        >
+          <img
+            src="icons/arrow-page-footer.png"
+            alt="navigation arrow"
+            class="arrow__image"
+          />
+        </button>
+      </div>
+
+      <div class="line line--footer"></div>
+
+      <nav class="nav nav--footer">
+        <ul class="nav__list nav__list--footer">
+          <li class="nav__item nav__item--footer">
+            <a
+              href="#gallery"
+              class="nav__link nav__link--footer"
+              tabindex="3"
+            >
+              Галерея
+            </a>
+          </li>
+
+          <li class="nav__item nav__item--footer">
+            <a
+              href="#events"
+              class="nav__link nav__link--footer"
+              tabindex="4"
+            >
+              Виставки та події
+            </a>
+          </li>
+
+          <li class="nav__item nav__item--footer">
+            <a
+              href="#"
+              class="nav__link nav__link--footer"
+              tabindex="5"
+            >
+              Про Нас
+            </a>
+          </li>
+
+          <li class="nav__item nav__item--footer">
+            <a
+              href="#signing"
+              class="nav__link nav__link--footer"
+              tabindex="6"
+            >
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="footer__bottom">
+        <p class="footer__bottom__text">Designed by Zhyriada Marina</p>
+        <p class="footer__bottom__text">
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
