add header and hero sections

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,62 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NaMu</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="nav">
+      <div class="nav__bar">
+        <a href="#menu">
+          <img
+            src="./images/icons/baseline-menu-24px.svg"
+            alt="menu icon"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="./images/icons/NA MU.svg"
+            alt="home icon"
+          />
+        </a>
+        <div></div>
+      </div>
+      <div class="nav__img"></div>
+    </header>
+
+    <div class="hero">
+      <h1 class="hero__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+      <div class="hero__tickets">
+        <div class="hero__tickets-title">КВИТКИ</div>
+        <div class="hero__tickets-arrow"></div>
+      </div>
+    </div>
+
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <a href="#">
+        <img
+          src="./images/icons/ri-close-fill.svg"
+          alt="menu icon"
+          class="menu__close-icon"
+        />
+      </a>
+    </aside>
+    <main></main>
+    <footer></footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
