--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,29 @@
         />
       </a>
     </aside>
-    <main></main>
+
+    <main class="main">
+      <h2>Актуальні події</h2>
+      <div class="main__current-events">
+        <div class="main__current-events-item">
+          <div class="main__current-events-item-img">
+            <img
+              src="./images/first.png"
+              alt="f"
+            />
+          </div>
+          <div class="main__current-events-item-data">
+            <p class="main__current-events-item-data-title">ВИСТАВКА</p>
+            <p class="main__current-events-item-data-time">26.08-29.11.2019</p>
+          </div>
+          <div class="main__current-events-item-title">
+            Йду і повертаюсь
+
+          </div>
+          <div class="main__current-events-item-text"></div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
     <script src="scripts/main.js"></script>
   </body>
