--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,30 @@
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="page__body">
     <header class="nav">
@@ -57,7 +81,7 @@
     </aside>
 
     <main class="main">
-      <h2>Актуальні події</h2>
+      <h2 class="main__title">Актуальні події</h2>
       <div class="main__current-events">
         <div class="main__current-events-item">
           <div class="main__current-events-item-img">
@@ -71,10 +95,36 @@
             <p class="main__current-events-item-data-time">26.08-29.11.2019</p>
           </div>
           <div class="main__current-events-item-title">
-            Йду і повертаюсь
-
+            <p>Йду і повертаюсь</p>
+            <div></div>
           </div>
-          <div class="main__current-events-item-text"></div>
+          <div class="main__current-events-item-text">
+            Національний Художній Музей України презентує унікальну частину
+            колекції Градобанку - українське мистецтво другої половини 1980-1995
+            років.
+          </div>
+        </div>
+
+        <div class="main__current-events-item">
+          <div class="main__current-events-item-img">
+            <img
+              src="./images/second.png"
+              alt="f"
+            />
+          </div>
+          <div class="main__current-events-item-data">
+            <p class="main__current-events-item-data-title">ВИСТАВКА</p>
+            <p class="main__current-events-item-data-time">26.08-29.11.2019</p>
+          </div>
+          <div class="main__current-events-item-title">
+            <p>І спогади і мрії</p>
+            <div></div>
+          </div>
+          <div class="main__current-events-item-text">
+            Національний художній музей України до 100 річчя від дня народження
+            видатної української художниці Тетяни Яблонської відкриває
+            ретроспективну ювілейну виставку «І спогади і мрії».
+          </div>
         </div>
       </div>
     </main>
