--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,21 @@
           </div>
         </div>
       </div>
+
+      <div class="main__lection">
+        <img
+          src="./images/lection.png"
+          alt="lection"
+          class="main__lection-img"
+        />
+        <div class="main__lection-info">
+          <div class="main__lection-info-data">
+            <p>ЛЕКЦІЯ</p>
+            <p>26/08/2019 - 11:00</p>
+          </div>
+          <div class="main__lection-info-title">Від класицизму до романтизму</div>
+        </div>
+      </div>
     </main>
     <footer></footer>
     <script src="scripts/main.js"></script>
