fixed some errors

--- a/src/index.html
+++ b/src/index.html
@@ -377,6 +377,7 @@
             <form
               action="#"
               class="subscribe__form"
+              onsubmit="this.reset(); return false;"
             >
               <input
                 type="email"
@@ -497,6 +498,7 @@
             <a
               href="https://maps.app.goo.gl/wFPzbtpWpHXn3Hvm6"
               class="footer__link"
+              target="_blank"
             >
               вул. М. Грушевського, 6; Київ, 01001
             </a>
