--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,85 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="./images/logo.svg"
+    />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/styles.scss"
     />
   </head>
-  <body>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__side-l">
+        <button class="icon icon--burger">
+          <span class="icon__line"></span>
+        </button>
+
+        <div class="header__block">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+          <div class="header__block-footer">
+            <img
+              src="./images/next-section.svg"
+              alt="перехід до подій"
+              class="header__next-section"
+            />
+
+            <a
+              href="#"
+              class="header__link"
+            >
+              <span class="header__link-text">КВИТКИ</span>
+              <div class="arrow-link arrow-link--green">
+                <img
+                  src="./images/icons/header-link-arrow.svg"
+                  alt="стрілка"
+                  class="arrow-link__cursor"
+                />
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="header__side-r">
+        <div class="header__container-r">
+          <a
+            href="#"
+            class="logo-link"
+          >
+            <img
+              src="./images/logo.svg"
+              alt="логотип сайту"
+              class="logo-link__image"
+            />
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <aside></aside>
+
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+
+    <footer></footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
