making header - almost finished background

--- a/src/index.html
+++ b/src/index.html
@@ -21,51 +21,56 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <div class="header__side-l">
-        <button class="icon icon--burger">
-          <span class="icon__line"></span>
-        </button>
-
-        <div class="header__block">
-          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-
-          <div class="header__block-footer">
-            <img
-              src="./images/next-section.svg"
-              alt="перехід до подій"
-              class="header__next-section"
-            />
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top">
+            <button class="icon icon--burger">
+              <span class="icon__line"></span>
+            </button>
 
             <a
               href="#"
-              class="header__link"
+              class="logo-link"
             >
-              <span class="header__link-text">КВИТКИ</span>
-              <div class="arrow-link arrow-link--green">
-                <img
-                  src="./images/icons/header-link-arrow.svg"
-                  alt="стрілка"
-                  class="arrow-link__cursor"
-                />
-              </div>
+              <img
+                src="./images/logo.svg"
+                alt="логотип сайту"
+                class="logo-link__image"
+              />
             </a>
           </div>
-        </div>
-      </div>
 
-      <div class="header__side-r">
-        <div class="header__container-r">
-          <a
-            href="#"
-            class="logo-link"
-          >
-            <img
-              src="./images/logo.svg"
-              alt="логотип сайту"
-              class="logo-link__image"
-            />
-          </a>
+          <div class="header__left-wrap">
+            <div class="header__info">
+              <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+              <div class="header__info-footer">
+                <img
+                  src="./images/next-section.svg"
+                  alt="перехід до подій"
+                  class="header__next-section"
+                />
+                <a
+                  href="#"
+                  class="header__link"
+                >
+                  <span class="header__link-text">КВИТКИ</span>
+                  <div class="arrow-link arrow-link--green">
+                    <img
+                      src="./images/icons/header-link-arrow.svg"
+                      alt="стрілка"
+                      class="arrow-link__cursor"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
+        <img
+          src="./images/header-background-image.jpg"
+          alt="фонова картинка"
+          class="header__background"
+        />
       </div>
     </header>
 
