--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
         <div class="paddings">
           <h2 class="gallery_title">Галерея</h2>
 
-          <div class="gallery_photos">
+          <div class="gallery_photos" id="slider">
             <img
               class="gallery_photos_photo gallery_photos_photo--1"
               src="./images/gallery/gallery1.svg"
@@ -251,6 +251,13 @@
               src="./images/gallery/gallery4ForDesktop.svg"
               alt="photo"
             >
+          </div>
+
+          <div class="gallery_btns">
+            <div class="gallery_btns_btn gallery_btns_btn--active" id="slider-btn-1"></div>
+            <div class="gallery_btns_btn" id="slider-btn-2"></div>
+            <div class="gallery_btns_btn" id="slider-btn-3"></div>
+            <div class="gallery_btns_btn" id="slider-btn-4"></div>
           </div>
         </div>
       </section>
@@ -418,5 +425,6 @@
     </footer>
 
     <script src="scripts/main.js"></script>
+    <script src="scripts/slider.js"></script>
   </body>
 </html>
