header - completed adaptation

--- a/src/index.html
+++ b/src/index.html
@@ -21,26 +21,27 @@
   </head>
   <body class="page__body">
     <header class="header">
+      <div class="header__background-on-phone"></div>
       <div class="container">
         <div class="header__content">
-          <div class="header__top">
-            <button class="icon icon--burger">
-              <span class="icon__line"></span>
-            </button>
-
-            <a
-              href="#"
-              class="logo-link"
-            >
-              <img
-                src="./images/logo.svg"
-                alt="логотип сайту"
-                class="logo-link__image"
-              />
-            </a>
-          </div>
-
           <div class="header__left-wrap">
+            <div class="header__top-wrap">
+              <button class="icon icon--burger">
+                <span class="icon__line"></span>
+              </button>
+
+              <a
+                href="#"
+                class="logo-link logo-link--on-phone"
+              >
+                <img
+                  src="./images/logo.svg"
+                  alt="логотип сайту"
+                  class="logo-link__image"
+                />
+              </a>
+            </div>
+
             <div class="header__info">
               <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
               <div class="header__info-footer">
@@ -66,11 +67,26 @@
             </div>
           </div>
         </div>
-        <img
-          src="./images/header-background-image.jpg"
-          alt="фонова картинка"
-          class="header__background"
-        />
+        <div class="header__background">
+          <div class="header__top-wrap">
+            <a
+              href="#"
+              class="logo-link logo-link--on-desktop"
+            >
+              <img
+                src="./images/logo.svg"
+                alt="логотип сайту"
+                class="logo-link__image"
+              />
+            </a>
+          </div>
+
+          <img
+            src="./images/header-background-image.jpg"
+            alt="фонова картинка"
+            class="header__background-image"
+          />
+        </div>
       </div>
     </header>
 
