--- a/src/index.html
+++ b/src/index.html
@@ -24,24 +24,22 @@
       <div class="header__background-on-phone"></div>
       <div class="container">
         <div class="header__content">
+          <button class="icon icon--burger">
+            <span class="icon__line"></span>
+          </button>
+
+          <a
+            href="#"
+            class="logo-link logo-link--on-phone"
+          >
+            <img
+              src="./images/logo.svg"
+              alt="логотип сайту"
+              class="logo-link__image"
+            />
+          </a>
+
           <div class="header__left-wrap">
-            <div class="header__top-wrap">
-              <button class="icon icon--burger">
-                <span class="icon__line"></span>
-              </button>
-
-              <a
-                href="#"
-                class="logo-link logo-link--on-phone"
-              >
-                <img
-                  src="./images/logo.svg"
-                  alt="логотип сайту"
-                  class="logo-link__image"
-                />
-              </a>
-            </div>
-
             <div class="header__info">
               <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
               <div class="header__info-footer">
@@ -90,7 +88,67 @@
       </div>
     </header>
 
-    <aside></aside>
+    <aside class="menu page__menu">
+      <div class="container">
+        <div class="menu__content">
+          <nav class="nav nav--margin-left">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#"
+                  class="nav__link nav__link--menu-setting"
+                >
+                  <span>Галерея</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#"
+                  class="nav__link nav__link--menu-setting"
+                >
+                  <span>Виставки та події</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#"
+                  class="nav__link nav__link--menu-setting"
+                >
+                  <span>Про Нас</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#"
+                  class="nav__link nav__link--menu-setting"
+                >
+                  <span>Контакти</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <div class="menu__separator"></div>
+          <div class="info">
+            <h6 class="info__title">Графік роботи</h6>
+            <ul class="info__chart">
+              <li class="info__chart-item"><span class="info__chart-text"><strong>12:00 — 20:00</strong> середа</span></li>
+              <li class="info__chart-item"><span class="info__chart-text"><strong>12:00 — 20:00</strong> четвер</span></li>
+              <li class="info__chart-item">
+                <span class="info__chart-text"><strong>12:00 — 20:00</strong> п’ятниця</span>
+              </li>
+              <li class="info__chart-item"><span class="info__chart-text"><strong>11:00 — 19:00</strong> субота</span></li>
+              <li class="info__chart-item"><span class="info__chart-text"><strong>11:00 — 19:00</strong> неділя</span></li>
+            </ul>
+            <div class="info__weekends">
+              <span class="info__weekends-text">
+                Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
+                закриття музею
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
 
     <main>
       <section></section>
