--- a/src/index.html
+++ b/src/index.html
@@ -93,57 +93,63 @@
         <div class="menu__content">
           <nav class="nav nav--margin-left">
             <ul class="nav__list">
-              <li class="nav__item">
-                <a
-                  href="#"
-                  class="nav__link nav__link--menu-setting"
-                >
-                  <span>Галерея</span>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a
-                  href="#"
-                  class="nav__link nav__link--menu-setting"
-                >
-                  <span>Виставки та події</span>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a
-                  href="#"
-                  class="nav__link nav__link--menu-setting"
-                >
-                  <span>Про Нас</span>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a
-                  href="#"
-                  class="nav__link nav__link--menu-setting"
-                >
-                  <span>Контакти</span>
-                </a>
-              </li>
+              <div class="nav__column">
+                <li class="nav__item">
+                  <a
+                    href="#"
+                    class="nav__link nav__link--menu-setting"
+                  >
+                    <span class="nav__link-text">Галерея</span>
+                  </a>
+                </li>
+                <li class="nav__item nav__item--height">
+                  <a
+                    href="#"
+                    class="nav__link nav__link--menu-setting"
+                  >
+                    <span class="nav__link-text">Виставки та події</span>
+                  </a>
+                </li>
+              </div>
+              <div class="nav__column">
+                <li class="nav__item">
+                  <a
+                    href="#"
+                    class="nav__link nav__link--menu-setting"
+                  >
+                    <span class="nav__link-text">Про Нас</span>
+                  </a>
+                </li>
+                <li class="nav__item nav__item--height">
+                  <a
+                    href="#"
+                    class="nav__link nav__link--menu-setting"
+                  >
+                    <span class="nav__link-text">Контакти</span>
+                  </a>
+                </li>
+              </div>
             </ul>
           </nav>
           <div class="menu__separator"></div>
           <div class="info">
             <h6 class="info__title">Графік роботи</h6>
-            <ul class="info__chart">
-              <li class="info__chart-item"><span class="info__chart-text"><strong>12:00 — 20:00</strong> середа</span></li>
-              <li class="info__chart-item"><span class="info__chart-text"><strong>12:00 — 20:00</strong> четвер</span></li>
-              <li class="info__chart-item">
-                <span class="info__chart-text"><strong>12:00 — 20:00</strong> п’ятниця</span>
-              </li>
-              <li class="info__chart-item"><span class="info__chart-text"><strong>11:00 — 19:00</strong> субота</span></li>
-              <li class="info__chart-item"><span class="info__chart-text"><strong>11:00 — 19:00</strong> неділя</span></li>
-            </ul>
-            <div class="info__weekends">
-              <span class="info__weekends-text">
-                Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
-                закриття музею
-              </span>
+            <div class="info__bottom-wrap">
+              <ul class="info__chart">
+                <li class="info__chart-item"><span class="info__chart-text"><strong>12:00 — 20:00</strong> середа</span></li>
+                <li class="info__chart-item"><span class="info__chart-text"><strong>12:00 — 20:00</strong> четвер</span></li>
+                <li class="info__chart-item">
+                  <span class="info__chart-text"><strong>12:00 — 20:00</strong> п’ятниця</span>
+                </li>
+                <li class="info__chart-item"><span class="info__chart-text"><strong>11:00 — 19:00</strong> субота</span></li>
+                <li class="info__chart-item"><span class="info__chart-text"><strong>11:00 — 19:00</strong> неділя</span></li>
+              </ul>
+              <div class="info__weekends">
+                <span class="info__weekends-text">
+                  <strong>Вихідні:</strong> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до
+                  закриття музею
+                </span>
+              </div>
             </div>
           </div>
         </div>
